--- a/Java_23_BankWork/.project
+++ b/Java_23_BankWork/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java_23_BankWork</name>
+	<name>Java_2019_30_BankWork_01</name>
 	<comment></comment>
 	<projects>
 	</projects>
